--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="apple-touch-icon" href="./favicon.png" />
 
-    <title>Need to add a title</title>
+    <title>PWA</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +16,7 @@
 <body>
     <div class="body-container">
         <!-- Title -->
-        <h1>Need to add a title</h1>
+        <h1>Lorem ipsum dolor</h1>
 
         <!-- Description -->
         <p>
