home and hamburger icon add

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 <!-- Fullscreen Popup for iFrame -->
 <div id="iframePopup" class="popup">
     <div class="popup-header">
-        <div class="close-btn" onclick="closePopup()"><i class="fa fa-bars"></i></div>
+        <div class="close-btn" onclick="closePopup()">
+            Home
+       </div>
+        <i class="fa fa-bars" style="font-size: 1.2rem;"></i>
     </div>
     <iframe id="popupFrame" src="" title=""></iframe>
 </div>
