update domain to module

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
 </div>
 
 <div class="dropdown">
-    <button onclick="toggleDropdown('domainOneDropdown')" class="dropbtn">Domain One Pages</button>
+    <button onclick="toggleDropdown('domainOneDropdown')" class="dropbtn">Module One Pages</button>
     <div id="domainOneDropdown" class="dropdown-content"></div>
 </div>
 
 <div class="dropdown">
-    <button onclick="toggleDropdown('domainTwoDropdown')" class="dropbtn">Domain Two Pages</button>
+    <button onclick="toggleDropdown('domainTwoDropdown')" class="dropbtn">Module Two Pages</button>
     <div id="domainTwoDropdown" class="dropdown-content"></div>
 </div>
 
 <div class="dropdown">
-    <button onclick="toggleDropdown('domainThreeDropdown')" class="dropbtn">Domain Three Pages</button>
+    <button onclick="toggleDropdown('domainThreeDropdown')" class="dropbtn">Module Three Pages</button>
     <div id="domainThreeDropdown" class="dropdown-content"></div>
 </div>
 
 <div class="dropdown">
-    <button onclick="toggleDropdown('domainFourDropdown')" class="dropbtn">Domain Four Pages</button>
+    <button onclick="toggleDropdown('domainFourDropdown')" class="dropbtn">Module Four Pages</button>
     <div id="domainFourDropdown" class="dropdown-content"></div>
 </div>
 
